--- a/src/components/NewsCardList/NewsCardList.css
+++ b/src/components/NewsCardList/NewsCardList.css
@@ -15,7 +15,7 @@
 }
 .news-card-list__container {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(288px, 1fr));
   margin-bottom: 64px;
   max-width: 1232px;
   margin-left: auto;
@@ -68,7 +68,7 @@
   }
   
   .news-card-list__container {
-    grid-template-columns: repeat(3, 224px);
+    grid-template-columns: repeat(auto-fit, minmax(224px, 1fr)); 
     gap: 8px;
     padding: 0;
     width: 100%;
