--- a/src/components/SavedNews/SavedNewsHeader.css
+++ b/src/components/SavedNews/SavedNewsHeader.css
@@ -1,8 +1,9 @@
 .saved-news-header {
   max-width: 1232px;
-  padding: 0 24px;
+  width: 100%;
   text-align: left;
-  margin-left: 104px;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
 
 .saved-news-header__heading {
