--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,12 @@
 }
 
 body {
-  overflow-x: hidden;
   margin: 0;
   padding: 0;
 }
 
 html {
   width: 100%;
-  overflow-x: hidden;
 }
 
 #root {
